front-end and Node can talk to each other now.

--- a/front_end/index.html
+++ b/front_end/index.html
@@ -10,8 +10,18 @@
 </head>
 
 <body>
-    <h1>Income</h1>
-    <p id='income'></p>
+    <div id='income-div'>
+        <h1 id='test'>Income</h1>
+        <button id='add-income-source'>Add Source</button>
+        <form id='add-income-form'>
+            <label for='source'>Source:</label><br>
+            <input type='text' id='source' name='source'><br>
+            <label for='amount'>Amount:</label><br>
+            <input type='text' id='amount' name='amount'>
+        </form>
+    </div>
+
+    <script src='front_end.js'></script>
 </body>
 
 </html>
