minor QOL update for add-income-form and slight refactoring of preload.js.

--- a/front_end/index.html
+++ b/front_end/index.html
@@ -17,8 +17,8 @@
             <label for='source'>Source:</label><br>
             <input type='text' id='new-income-source' name='new-income-source'><br>
             <label for='amount'>Amount:</label><br>
-            <input type='text' id='new-income-amount' name='new-income-amount'>
-            <input type='submit' value='Submit'>
+            <input type='number' id='new-income-amount' name='new-income-amount'>
+            <input type='submit' value='Submit' hidden>
         </form>
     </div>
 
