--- a/front_end/index.html
+++ b/front_end/index.html
@@ -35,7 +35,7 @@
             <input type='checkbox' id='new-expense-automatic' name='new-expense-automatic'><br>
             <div id='new-expense-date-visibility' hidden>
                 <label for='new-expense-date'>Day of Withdrawal (1-31):</label><br>
-                <input type='number' id='new-expense-day' name='new-expense-day' min="1" max="31">
+                <input type='number' id='new-expense-date' name='new-expense-day' min="1" max="31">
             </div>
             <input type='submit' value='Submit' hidden>
         </form>
